--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_light_primary">#984718</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#FFDBCC</color>
+    <color name="md_theme_light_onPrimaryContainer">#351000</color>
+    <color name="md_theme_light_secondary">#765749</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFDBCC</color>
+    <color name="md_theme_light_onSecondaryContainer">#2C160B</color>
+    <color name="md_theme_light_tertiary">#655F31</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#EDE4A9</color>
+    <color name="md_theme_light_onTertiaryContainer">#1F1C00</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FFFBFF</color>
+    <color name="md_theme_light_onBackground">#201A18</color>
+    <color name="md_theme_light_surface">#FFFBFF</color>
+    <color name="md_theme_light_onSurface">#201A18</color>
+    <color name="md_theme_light_surfaceVariant">#F4DED5</color>
+    <color name="md_theme_light_onSurfaceVariant">#52443D</color>
+    <color name="md_theme_light_outline">#85736C</color>
+    <color name="md_theme_light_inverseOnSurface">#FBEEE9</color>
+    <color name="md_theme_light_inverseSurface">#362F2C</color>
+    <color name="md_theme_light_inversePrimary">#FFB693</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="seed">#673419</color>
+    <color name="md_theme_dark_primary">#FFB693</color>
+    <color name="md_theme_dark_onPrimary">#562000</color>
+    <color name="md_theme_dark_primaryContainer">#7A3001</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFDBCC</color>
+    <color name="md_theme_dark_secondary">#E6BEAC</color>
+    <color name="md_theme_dark_onSecondary">#432A1E</color>
+    <color name="md_theme_dark_secondaryContainer">#5C4033</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDBCC</color>
+    <color name="md_theme_dark_tertiary">#D0C890</color>
+    <color name="md_theme_dark_onTertiary">#363107</color>
+    <color name="md_theme_dark_tertiaryContainer">#4D481C</color>
+    <color name="md_theme_dark_onTertiaryContainer">#EDE4A9</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#201A18</color>
+    <color name="md_theme_dark_onBackground">#EDE0DB</color>
+    <color name="md_theme_dark_surface">#201A18</color>
+    <color name="md_theme_dark_onSurface">#EDE0DB</color>
+    <color name="md_theme_dark_surfaceVariant">#52443D</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D7C2B9</color>
+    <color name="md_theme_dark_outline">#A08D85</color>
+    <color name="md_theme_dark_inverseOnSurface">#201A18</color>
+    <color name="md_theme_dark_inverseSurface">#EDE0DB</color>
+    <color name="md_theme_dark_inversePrimary">#984718</color>
+    <color name="md_theme_dark_shadow">#000000</color>
 </resources>
