--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,7 +28,7 @@
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
     </style>
 
-    <style name="Theme.ColorDinamico.NoActionBar">
+    <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
